kubernetes/apps/flux-system/headlamp/app/route.yaml
# ---
# # yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: headlamp
#   namespace: flux-system
# spec:
#   hostnames:
#     - headlamp.garb.dev
#   parentRefs:
#     - name: envoy-internal
#       namespace: kube-system
#       sectionName: https
#   rules:
#     - backendRefs:
#         - name: headlamp
#           namespace: flux-system
#           port: 80
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app headlamp
  annotations:
      gethomepage.dev/enabled: "true"
      gethomepage.dev/description: Cluster Dashboard
      gethomepage.dev/group: observe
      gethomepage.dev/icon: sh-target
      gethomepage.dev/name: headlamp
      gethomepage.dev/app: *app
spec:
  hostnames:
    - "headlamp.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: headlamp
          namespace: flux-system
          port: 80
